Revision history for DBIx::Class

    * Fixes
        - More robust behavior under heavily threaded environments - make
          sure we do not have refaddr reuse in the global storage registry
        - Fix failing test on 5.8 under Win32 (RT#81114)

0.08204 2012-11-08
    * New Features / Changes
        - SQLMaker now accepts \'literal' with the 'for' rs attribute as an
          override to the builtin FOR options
    * Fixes
        - Fix unique constraint violations in Ordered.pm blanket movement
          (RT#79773, rolls back short-sighted 5e6fde33e)
        - Fix API mismatch between new_result() and new_related() (originally
          broken by fea3d045)
        - Fix test failure on perl 5.8
    * Misc
        - Much more extensive diagnostics when a new RDBMS/DSN combination is
          encountered (RT#80431)

0.08203 2012-10-18
    * Fixes
        - Really fix inadequate $dbh->ping SQLite implementation (what shipped
          in 0.08201 tickled other deficiencies in DBD::SQLite itself)

0.08202 2012-10-06
    * Fixes
        - Replace inadequate $dbh->ping SQLite implementation with our own,
          fixes RT#78420

0.08200 2012-08-24 (UTC)
    * Fixes
        - Change one of the new tests for the previous release to not require
          SQL::Translator

0.08199 2012-08-22 (UTC)
    * Fixes
        - Roll back incomplete (and broken) internal changes - restore prefetch functionality

0.08198 2012-07-11 03:43 (UTC)
    * Fixes
        - Fix a number of Win32 Test issues
        - Fix silent Oracle connection failures

0.08197 2012-07-10 10:32 (UTC)
    * New Features / Changes
        - Issue a warning when DateTime objects are passed to ->search
        - Fast populate() in void context is now even more efficient by
          going directly through execute_for_fetch bypassing execute_array
        - Fix update()/delete() on complex resultsets to no longer fall back
          to silly row-by-row deletion, construct a massive OR statement